final documenting / formatting

--- a/stocks/stocks2/templates/addToWallet.html
+++ b/stocks/stocks2/templates/addToWallet.html
@@ -14,7 +14,7 @@
 {% if balance %}
     current balance: $ {{ balance }}
 {% else %}
-    current balance. $ 0.00
+    current balance: $ 0.00
 {% endif %}
 
 {% endblock %}
